apps/homelab/hajimari/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari
  namespace: hajimari
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`hajimari.home`)
      kind: Rule
      services:
        - name: hajimari
          kind: Service
          port: 3000
  # TLS: use the cert-manager issued secret
  tls:
    secretName: hajimari-tls
